--- a/05_imbalance_learning/01-imbalanced_learning.ipynb
+++ b/05_imbalance_learning/01-imbalanced_learning.ipynb
@@ -1348,6 +1348,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Not a good idea to oversample, it is very similar to the class_weight='balanced' option. However, here you make much more computation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### More fancy methods\n",
     "\n",
     "\n",
