--- a/09_trees_gradient_boosting/01b-grow_a_forest.ipynb
+++ b/09_trees_gradient_boosting/01b-grow_a_forest.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,18 +65,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 37,  65,  12,  86,  30,  71,  15,  79,  75,  49,   5, 101,  76,\n",
+       "         2,  84,  69,  10,  57, 107,   8,  25,  73,  47, 103,  89,   8,\n",
+       "        47, 107,  72,  46,  31,  41,  25,  78,   6,  79,   3, 109,  27,\n",
+       "        66,  26,  55,  37,  40,  95,  59,  12,  35,  73,  23,  10, 109,\n",
+       "        12,  71,  32,  89, 110,  65,   4, 100,  20,  89,  36,  61, 106,\n",
+       "         5,  99,  48,  45,  26,  35,  46,   9,   9,  98,  16,  99,  84,\n",
+       "        81,  31,  74,  20,  58,  67,  99,  11,  28,  79,  88,  95,  99,\n",
+       "        58,  67,  65,   9,   4,  39,  51,   4,  92,  63,  27,  11,  24,\n",
+       "        82,   6,  79,  50,  50,  25,  53,  95])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bootstrap_idx(X_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({28: 4,\n",
+       "         48: 3,\n",
+       "         50: 3,\n",
+       "         54: 3,\n",
+       "         26: 3,\n",
+       "         34: 3,\n",
+       "         65: 3,\n",
+       "         18: 3,\n",
+       "         57: 3,\n",
+       "         105: 2,\n",
+       "         35: 2,\n",
+       "         24: 2,\n",
+       "         96: 2,\n",
+       "         94: 2,\n",
+       "         67: 2,\n",
+       "         84: 2,\n",
+       "         36: 2,\n",
+       "         31: 2,\n",
+       "         49: 2,\n",
+       "         66: 2,\n",
+       "         5: 2,\n",
+       "         37: 2,\n",
+       "         82: 2,\n",
+       "         97: 2,\n",
+       "         71: 2,\n",
+       "         11: 2,\n",
+       "         74: 2,\n",
+       "         107: 2,\n",
+       "         87: 2,\n",
+       "         13: 1,\n",
+       "         52: 1,\n",
+       "         33: 1,\n",
+       "         81: 1,\n",
+       "         53: 1,\n",
+       "         83: 1,\n",
+       "         46: 1,\n",
+       "         92: 1,\n",
+       "         70: 1,\n",
+       "         23: 1,\n",
+       "         17: 1,\n",
+       "         39: 1,\n",
+       "         77: 1,\n",
+       "         98: 1,\n",
+       "         68: 1,\n",
+       "         80: 1,\n",
+       "         111: 1,\n",
+       "         91: 1,\n",
+       "         64: 1,\n",
+       "         43: 1,\n",
+       "         79: 1,\n",
+       "         14: 1,\n",
+       "         20: 1,\n",
+       "         104: 1,\n",
+       "         78: 1,\n",
+       "         72: 1,\n",
+       "         59: 1,\n",
+       "         93: 1,\n",
+       "         75: 1,\n",
+       "         15: 1,\n",
+       "         76: 1,\n",
+       "         22: 1,\n",
+       "         32: 1,\n",
+       "         106: 1,\n",
+       "         2: 1,\n",
+       "         42: 1,\n",
+       "         19: 1,\n",
+       "         90: 1,\n",
+       "         45: 1,\n",
+       "         7: 1,\n",
+       "         110: 1,\n",
+       "         6: 1,\n",
+       "         29: 1,\n",
+       "         103: 1})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "Counter(bootstrap_idx(X_train))"
@@ -84,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,9 +206,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classes distribution in the original data: Counter({1: 38, 0: 37, 2: 37})\n",
+      "Classes distribution in the bootstrap: Counter({0: 44, 1: 41, 2: 27})\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'Classes distribution in the original data: {Counter(y_train)}')\n",
     "print(f'Classes distribution in the bootstrap: {Counter(y_train_bootstrap)}')"
@@ -142,10 +253,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9736842105263158\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from scipy.stats import mode\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "ntrees = 5\n",
+    "max_depth = 3\n",
+    "\n",
+    "tree_list = []\n",
+    "ypred_list = []\n",
+    "for i in range(ntrees):\n",
+    "    X_train_i, y_train_i = bootstrap_sample(X_train, y_train)\n",
+    "    treei = DecisionTreeClassifier(max_depth=max_depth)\n",
+    "    treei.fit(X_train_i, y_train_i)\n",
+    "    ypred_list.append(treei.predict(X_test))\n",
+    "    tree_list.append(treei)\n",
+    "    \n",
+    "ypred,_ = mode(np.array(ypred_list), axis=0, keepdims=False)\n",
+    "print(accuracy_score(y_test, ypred))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -160,10 +298,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9736842105263158\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "\n",
+    "bagging = BaggingClassifier(\n",
+    "    estimator=DecisionTreeClassifier(max_depth=max_depth),\n",
+    "    n_estimators=ntrees\n",
+    ")\n",
+    "bagging.fit(X_train, y_train)\n",
+    "print(bagging.score(X_test, y_test))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
